login and signup work

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -69,7 +69,7 @@
         <button class="btn btn-primary btn-block">Sign Up</button>
       </div>
 
-      <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+      <div class="alert alert-warning" *ngIf="f.submitted && isSignupFailed">
         Signup failed!<br />{{ errorMessage }}
       </div>
     </form>
