--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,81 +1,44 @@
-<div class="col-md-12">
-  <div class="card card-container">
-    <form
-      *ngIf="!isSuccessful"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
-      <div class="form-group">
-        <label>Username</label>
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          [(ngModel)]="form.username"
-          required
-          minlength="4"
-          maxlength="20"
-          #username="ngModel"
-        />
-        <div class="alert-danger" *ngIf="username.errors && f.submitted">
-          <div *ngIf="username.errors.required">Username is required</div>
-          <div *ngIf="username.errors.minlength">
-            Username must be at least 4 characters
-          </div>
-          <div *ngIf="username.errors.maxlength">
-            Username must be at most 20 characters
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Email</label>
-        <input
-          type="email"
-          class="form-control"
-          name="email"
-          [(ngModel)]="form.email"
-          required
-          email
-          #email="ngModel"
-        />
-        <div class="alert-danger" *ngIf="email.errors && f.submitted">
-          <div *ngIf="email.errors.required">Email is required</div>
-          <div *ngIf="email.errors.email">
-            Email must be a valid email address
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="form.password"
-          required
-          minlength="8"
-          #password="ngModel"
-        />
-        <div class="alert-danger" *ngIf="password.errors && f.submitted">
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">
-            Password must be at least 8 characters
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block">Sign Up</button>
-      </div>
+<div class="main-div">
+  <mat-card *ngIf="!isLoggedIn" class="mat-card" color="primary">
 
-      <div class="alert alert-warning" *ngIf="f.submitted && isSignupFailed">
-        Signup failed!<br />{{ errorMessage }}
-      </div>
-    </form>
+    <mat-card-header class="mat-card-header">
+      <mat-card-title>Signup</mat-card-title>
+    </mat-card-header>
 
-    <div class="alert alert-success" *ngIf="isSuccessful">
-      Your registration is successful!
+    <mat-card-content class="mat-card-content">
+      <form name="form" #f="ngForm"> <table>
+        <tr> <td>
+          <mat-form-field class="mat-form-field">
+            <input matInput placeholder="Username" [(ngModel)]="form.username" type="username" name="username" required>
+          </mat-form-field>
+        </td> </tr>
+
+        <tr> <td>
+          <mat-form-field class="mat-form-field">
+            <input matInput placeholder="Email" [(ngModel)]="form.email" type="email" name="email" required>
+          </mat-form-field>
+        </td> </tr>
+
+        <tr> <td>
+          <mat-form-field class="mat-form-field">
+            <input matInput placeholder="Password" [(ngModel)]="form.password" type="password" name="password" required>
+          </mat-form-field>
+        </td> </tr>
+      </table> </form>
+
+      <mat-spinner [style.display]="showSpinner? 'block' : 'none'"></mat-spinner>
+
+    </mat-card-content>
+
+    <div *ngIf="isSignupFailed">
+      Signup Failed!
     </div>
-  </div>
+
+    <mat-card-actions class="mat-card-actions">
+      <button mat-raised-button (click)="f.form.valid && onSubmit()" color="primary">Signup</button>
+      <mat-label [routerLink]="['/login']" color="primary">or Login</mat-label>
+    </mat-card-actions>
+
+  </mat-card>
 </div>
+
