--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <a mat-button href="/signup" routerLink="signup">Signup</a>
     </div>
     <div *ngIf="isLoggedIn">
-        <a mat-button href="/documents" routerLink="documents">Documents</a>
+        <a mat-button href="/upload" routerLink="upload">Upload Documents</a>
         <a mat-button (click)="logout()">Logout</a>
     </div>
   </mat-toolbar>
