--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -38,7 +38,10 @@
       <button mat-raised-button (click)="f.form.valid && onSubmit()" color="primary">Signup</button>
       <mat-label [routerLink]="['/login']" color="primary">or Login</mat-label>
     </mat-card-actions>
-
   </mat-card>
+
+  <div *ngIf="!isSignupFailed && isLoggedIn">
+    <a href [routerLink]="['/documents']"></a>
+  </div>
 </div>
 
