--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
       <a mat-button href="/signup" routerLink="signup">Signup</a>
     </div>
     <div *ngIf="isLoggedIn">
-      <a mat-button href="/documents" routerLink="documents">List</a>
+      <a mat-button href="/documents" routerLink="documents">My Documents</a>
       <a mat-button href="/upload" routerLink="upload">Upload</a>
+      <a mat-button href="/report" routerLink="report">Report</a>
       <a mat-button (click)="logout()">Logout</a>
     </div>
   </mat-toolbar>
