--- a/src/app/components/documents/documents.component.html
+++ b/src/app/components/documents/documents.component.html
@@ -1,26 +1,63 @@
 <div class="main-div">
-  <mat-card class="mat-card" *ngIf="isLoggeIn" color="primary">
+  <mat-card class="mat-card" *ngIf="isLoggeIn">
     <mat-card-header class="mat-card-header">
       <mat-card-title>Documents List</mat-card-title>
       <button mat-button (click)="getDocuments()">Get All</button>
-      <button mat-button>Get By Tag</button>
-      <button mat-button>Get By Year</button>
-      <button mat-button>Get By Year And Tag</button>
-      <button mat-button *ngIf="selectedDocument" (click)="downloadDocument()">DOWNLOAD {{selectedDocument.filename}}</button>
-      <button mat-button *ngIf="selectedDocument" (click)="deleteDocument()">DELETE {{selectedDocument.filename}}</button>
+      <button mat-button (click)="openDialogGet()">Get By Year And Tag</button>
     </mat-card-header>
 
     <mat-card-content class="mat-card-content">
-        <div *ngFor="let doc of this.documents" (click)="select(doc)" class="document-div">
-          <mat-card>
-            <mat-label>filename: {{doc.filename}}</mat-label> <br>
-            <mat-label>tag: {{doc.tag}}</mat-label> <br>
-            <mat-label>year: {{doc.year}}</mat-label> <br>
-            <mat-label>amount: {{doc.amount}}</mat-label> <br>
-            <mat-label>description: {{doc.description}}</mat-label> <br>
-          </mat-card>
-        </div>
-    </mat-card-content>
+      <table mat-table [dataSource]="documents">
+        <ng-container matColumnDef="Filename">
+          <th mat-header-cell *matHeaderCellDef>Filename</th>
+          <td mat-cell *matCellDef="let element">{{element.filename}}</td>
+        </ng-container>
 
+        <ng-container matColumnDef="Tag">
+          <th mat-header-cell *matHeaderCellDef>Tag</th>
+          <td mat-cell *matCellDef="let element">{{element.tag}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Year">
+          <th mat-header-cell *matHeaderCellDef>Year</th>
+          <td mat-cell *matCellDef="let element">{{element.year}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Amount">
+          <th mat-header-cell *matHeaderCellDef>Amount</th>
+          <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Description">
+          <th mat-header-cell *matHeaderCellDef>Description</th>
+          <td mat-cell *matCellDef="let element">{{element.description}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="Update">
+          <th mat-header-cell *matHeaderCellDef>Update</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon (click)="openDialogUpdate(element)">update</mat-icon>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Download">
+          <th mat-header-cell *matHeaderCellDef>Download</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon (click)="downloadDocument(element)">save_alt</mat-icon>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Delete">
+          <th mat-header-cell *matHeaderCellDef>Delete</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-icon (click)="deleteDocument(element)">delete</mat-icon>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+      </table>
+
+    </mat-card-content>
   </mat-card>
 </div>
