--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -1,41 +1,45 @@
-<div class="form">
-  <mat-card *ngIf="isLoggedIn" class="mat-card" color="primary">
+<div class="main-div">
+  <mat-card *ngIf="isLoggedIn" class="mat-card">
     <mat-card-header class="mat-card-header">
       <mat-card-title>Upload New Document</mat-card-title>
     </mat-card-header>
 
-    <mat-card-content class="mat-card-content"> <form name="form"> <table>
-        <tr> <td>
-          <mat-form-field class="mat-form-field">
-            <input [(ngModel)]="form.filename" matInput name="filename" placeholder="Filename" required type="text">
-          </mat-form-field>
-        </td> </tr>
-        <tr> <td>
-          <mat-form-field class="mat-form-field">
-            <input [(ngModel)]="form.year" matInput name="year" placeholder="Year" required type="number">
-          </mat-form-field>
-        </td> </tr>
-        <tr> <td>
-          <mat-form-field class="mat-form-field">
-            <input [(ngModel)]="form.description" matInput name="description" placeholder="Description" required type="text">
-          </mat-form-field>
-        </td> </tr>
-        <tr> <td>
-          <mat-form-field class="mat-form-field">
-            <input [(ngModel)]="form.amount" matInput name="amount" placeholder="Amount" required type="text">
-          </mat-form-field>
-        </td> </tr>
-        <tr> <td>
-          <mat-form-field class="mat-form-field">
-            <input [(ngModel)]="form.tag" matInput name="tag" placeholder="Tag" required type="text">
-          </mat-form-field>
-        </td> </tr>
-        <tr> <td>
-          <button type="button" mat-raised-button (click)="fileInput.click()" *ngIf="form.filename && form.year && form.description && form.amount && form.tag">Choose File</button>
-          <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file">
-          <mat-spinner [style.display]="showSpinner? 'block' : 'none'"></mat-spinner>
-          <mat-label *ngIf="isUploaded">File uploaded</mat-label>
-        </td> </tr>
-      </table> </form> </mat-card-content>
+    <mat-card-content class="mat-card-content">
+      <form>
+        <mat-form-field class="mat-form-field">
+          <mat-label>Filename</mat-label>
+          <input [(ngModel)]="form.filename" matInput name="filename" required type="text" pattern="^[_A-Za-z0-9]{3,}\.(?:pdf|doc|docx)$">
+        </mat-form-field>
+
+        <mat-form-field class="mat-form-field">
+          <mat-label>Tag</mat-label>
+          <mat-select [(value)]="form.tag">
+            <mat-option *ngFor="let t of tagList" [value]="t">{{t}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field class="mat-form-field">
+          <mat-label>Year</mat-label>
+          <input [(ngModel)]="form.year" matInput name="year" required type="number" [max]=this.MAX_YEAR [min]="1950">
+        </mat-form-field>
+
+        <mat-form-field class="mat-form-field">
+          <mat-label>Amount</mat-label>
+          <input [(ngModel)]="form.amount" matInput name="amount" required type="text" [min]="0">
+        </mat-form-field>
+
+        <mat-form-field class="mat-form-field">
+          <mat-label>Description</mat-label>
+          <input [(ngModel)]="form.description" matInput name="description" required type="text">
+        </mat-form-field>
+
+        <button type="button" mat-button (click)="fileInput.click()"
+                *ngIf="form.description && form.filename.match('^[_A-Za-z0-9]{3,}\\.(?:pdf|doc|docx)$') &&
+                form.amount>0 && form.year>=1950 && form.year<=this.MAX_YEAR">Choose File</button>
+        <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file">
+        <mat-spinner [style.display]="showSpinner? 'block' : 'none'"></mat-spinner>
+        <mat-label *ngIf="isUploaded">File uploaded</mat-label>
+      </form>
+    </mat-card-content>
   </mat-card>
 </div>
