--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="main-div" >
-  <mat-card class="mat-card" *ngIf="!isLoggedIn" color="primary">
+<div class="main-div">
+  <mat-card *ngIf="!isLoggedIn" class="mat-card">
     <mat-card-header class="mat-card-header">
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
@@ -11,15 +11,12 @@
               <input matInput placeholder="Email" [(ngModel)]="form.email" name="email" type="email" email required>
             </mat-form-field>
           </td></tr>
-
           <tr><td>
             <mat-form-field class="mat-form-field">
               <input matInput placeholder="Password" [(ngModel)]="form.password" name="password" type="password" required>
             </mat-form-field>
           </td></tr>
-
         </table>
-
       </form>
       <mat-spinner [style.display]="showSpinner? 'block' : 'none'"></mat-spinner>
     </mat-card-content>
@@ -27,10 +24,11 @@
       Login Failed!
     </div>
     <mat-card-actions class="mat-card-actions">
-      <button (click)="form.email && form.password && onSubmit()" color="primary" mat-raised-button>Login</button>
-      <mat-label [routerLink]="['/signup']">or Signup</mat-label>
+      <button class="space_btn" (click)="form.email && form.password && onSubmit()" color="primary" mat-raised-button >Login</button>
+      <mat-label class="space_label" [routerLink]="['/signup']">or Signup</mat-label>
     </mat-card-actions>
   </mat-card>
+
 </div>
 
 
