--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,23 @@
 <div id="app">
   <mat-toolbar color="primary">
-    <span>Personal Accounting App</span>
-    <span class="spacer">
+    <span class="spacer">Personal Accounting App</span>
+    <div *ngIf="!isLoggedIn">
+    <a mat-button href="/login" routerLink="login">Login</a>
+    <a mat-button href="/signup" routerLink="signup">Signup</a>
+    </div>
+    <span >
       <div *ngIf="isLoggedIn">
         <a mat-button href="/documents" routerLink="documents">My Documents</a>
         <a mat-button href="/upload" routerLink="upload">Upload</a>
         <a mat-button href="/report" routerLink="report">Report</a>
       </div>
     </span>
-    <div *ngIf="!isLoggedIn">
-      <a mat-button href="/login" routerLink="login">Login</a>
-      <a mat-button href="/signup" routerLink="signup">Signup</a>
-    </div>
+
     <div *ngIf="isLoggedIn">
       <a mat-button *ngIf="isLoggedIn" (click)="logout()">Logout</a>
     </div>
-
-
   </mat-toolbar>
-
-  <div class="container">
+  <div>
     <router-outlet></router-outlet>
   </div>
 </div>
