--- a/src/app/components/documents/documents.component.html
+++ b/src/app/components/documents/documents.component.html
@@ -1,9 +1,9 @@
 <div class="main-div">
   <mat-card class="mat-card" *ngIf="isLoggeIn">
     <mat-card-header class="mat-card-header">
-      <mat-card-title>Documents List</mat-card-title>
-      <button mat-button (click)="getDocuments()">Get All</button>
-      <button mat-button (click)="openDialogGet()">Get By Year And Tag</button>
+      <mat-card-title>Documents</mat-card-title>
+      <button mat-button (click)="getDocuments()">All</button>
+      <button mat-button (click)="openDialogGet()">Search By</button>
     </mat-card-header>
 
     <mat-card-content class="mat-card-content">
@@ -25,7 +25,7 @@
 
         <ng-container matColumnDef="Amount">
           <th mat-header-cell *matHeaderCellDef>Amount</th>
-          <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+          <td mat-cell *matCellDef="let element">{{element.amount}}€</td>
         </ng-container>
 
         <ng-container matColumnDef="Description">
