--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,21 +1,24 @@
 <div class="main-div" *ngIf="isLoggeIn">
   <mat-card>
-    <mat-card-header>
-      <input matInput placeholder="year" type="number" [(ngModel)]="year" (change)="getReport()" [max]=this.MAX_YEAR [min]="1950" required>
+    <mat-card-header class="mat-form-header">
+      <mat-card-title class="mat-form-title">Report</mat-card-title>
+      <mat-card-subtitle>
+        <mat-form-field class="mat-form-field">
+          <mat-label>year</mat-label>
+          <input  matInput placeholder="year" type="number" [(ngModel)]="year" (change)="getReport()" [max]=this.MAX_YEAR [min]="1950">
+        </mat-form-field>
+      </mat-card-subtitle>
     </mat-card-header>
-
-    <mat-card-content>
+    <mat-card-content class="mat-card-content">
       <table mat-table [dataSource]="report | keyvalue">
         <ng-container matColumnDef="Tag">
           <th mat-header-cell *matHeaderCellDef>Tag</th>
           <td mat-cell *matCellDef="let element">{{element.key}}</td>
         </ng-container>
-
         <ng-container matColumnDef="Total Amount">
-          <th mat-header-cell *matHeaderCellDef>Total Amount</th>
-          <td mat-cell *matCellDef="let element">{{element.value}}</td>
+          <th mat-header-cell *matHeaderCellDef>Total Amount (€)</th>
+          <td mat-cell *matCellDef="let element">{{element.value}}€</td>
         </ng-container>
-
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
       </table>
