--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -5,3 +5,26 @@
   align-items: center;
 }
 
+.space_btn {
+  margin: 10px;
+}
+
+.space_label {
+  margin-left: 70px;
+}
+
+.mat-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mat-card-header {
+  margin-top: 20px;
+}
+
+.mat-card-content {
+  margin-top: 30px;
+}
+
+
