--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,14 +1,14 @@
 <div class="main-div">
   <mat-card *ngIf="!isLoggedIn">
-    <mat-card-header>
+    <mat-card-header class="mat-card-header">
       <mat-card-title>Signup</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
+    <mat-card-content class="mat-card-content">
       <form name="form" #f="ngForm">
         <table>
          <tr> <td>
            <mat-form-field>
-              <input matInput placeholder="Username" [(ngModel)]="form.username" minlength="8" type="username" name="username" required>
+              <input matInput placeholder="Username" [(ngModel)]="form.username" minlength="4" type="username" name="username" required>
            </mat-form-field>
          </td> </tr>
          <tr> <td>
@@ -28,9 +28,9 @@
     <div *ngIf="isSignupFailed">
       Signup Failed!
     </div>
-    <mat-card-actions>
-      <button mat-raised-button (click)="f.form.valid && onSubmit()" color="primary">Signup</button>
-      <mat-label [routerLink]="['/login']">or Login</mat-label>
+    <mat-card-actions class="mat-card-actions">
+      <button class="space_btn" mat-raised-button (click)="f.form.valid && onSubmit()" color="primary">Signup</button>
+      <mat-label class="space_label" [routerLink]="['/login']">or Login</mat-label>
     </mat-card-actions>
   </mat-card>
 </div>
