--- a/src/app/components/documents/documents.component.html
+++ b/src/app/components/documents/documents.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <mat-card class="mat-card" *ngIf="isLoggeIn">
     <mat-card-header class="mat-card-header">
-      <mat-card-title>Documents</mat-card-title>
+      <mat-card-title style="color:aliceblue !important;">Documents</mat-card-title>
       <button mat-button (click)="getDocuments()">All</button>
       <button mat-button (click)="openDialogGet()">Search By</button>
     </mat-card-header>
