--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,7 +1,7 @@
 <div class="main-div" *ngIf="isLoggeIn">
   <mat-card>
     <mat-card-header class="mat-form-header">
-      <mat-card-title class="mat-form-title">Report</mat-card-title>
+      <mat-card-title style="color:aliceblue !important;" class="mat-form-title">Report</mat-card-title>
       <mat-card-subtitle>
         <mat-form-field class="mat-form-field">
           <mat-label>year</mat-label>
