--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <mat-card *ngIf="!isLoggedIn">
     <mat-card-header class="mat-card-header">
-      <mat-card-title>Signup</mat-card-title>
+      <mat-card-title style="color:aliceblue !important;">Signup</mat-card-title>
     </mat-card-header>
     <mat-card-content class="mat-card-content">
       <form name="form" #f="ngForm">
