--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <mat-card *ngIf="!isLoggedIn" class="mat-card">
     <mat-card-header class="mat-card-header">
-      <mat-card-title>Login</mat-card-title>
+      <mat-card-title style="color:aliceblue !important;">Login</mat-card-title>
     </mat-card-header>
     <mat-card-content class="mat-card-content">
       <form name="form">
