--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <mat-card *ngIf="isLoggedIn" class="mat-card">
     <mat-card-header class="mat-card-header">
-      <mat-card-title>Upload</mat-card-title>
+      <mat-card-title style="color:aliceblue !important;">Upload</mat-card-title>
     </mat-card-header>
 
     <mat-card-content class="mat-card-content">
@@ -41,7 +41,8 @@
             <button type="button" mat-button (click)="fileInput.click()"
                     *ngIf="form.description && form.filename.match('^[_A-Za-z0-9]{3,}\\.(?:pdf|doc|docx)$') &&
                 form.amount>0 && form.year>=1950 && form.year<=this.MAX_YEAR">Choose File</button>
-            <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file" accept="application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document">
+            <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file"
+                   accept="application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document">
             <mat-spinner [style.display]="showSpinner? 'block' : 'none'"></mat-spinner>
             <mat-label *ngIf="isUploaded">File uploaded</mat-label>
           </td></tr>
